# break-filler

./: Cargo.toml  Readme.md  test.sh
src/: cli.rs  install.rs  lib.rs  main.rs  reminder.rs  time.rs  ui.rs  window_manager.rs
tests/: open_window.rs  planner.rs  reminder.rs
