[package]
name = "break-filler"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
dark-light = "2.0.0"
break-enforcer = { git = "http://www.github.com/evavh/break-enforcer" }
clap = "4.5.27"
jiff = { version = "0.1.28", features = ["serde"] }
service-install = "0.5.6"
color-eyre = "0.6.3"
itertools = "0.14.0"
dbstruct = "0.5.0"
tokio = { version = "1.43.0", features = ["time"] }
swayipc = "3.0.3"

[dev-dependencies]
tempfile = "3.16.0"

